@@ -14,6 +14,7 @@
 * added configurable option breaks to ConfigParser
 * refactored Delegate to Config, and simplified
   implementation for nesting to use NestConfig
+* refactored :duplicate_default attribute to :dup
 
 == 0.5.0 / 2009-05-25
 
